--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -175,7 +175,9 @@
       font-weight: lighter;
       color: white; }
     #introduction p.download_links {
-      font-size: 16px; } }
+      font-size: 16px; }
+    #introduction li {
+      color: white; } }
   @media screen and (min-width: 0px) and (max-width: 640px) {
     #introduction {
       padding-bottom: 20px; }
