--- a/assets/sass/styles.css.scss
+++ b/assets/sass/styles.css.scss
@@ -202,6 +202,10 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
       // margin-top: 16px;
     }
 
+    li {
+      color: $white;
+    }
+
     @include media($mobile) {
       p {
         font-size: 16px;
