--- a/_layouts/model.html
+++ b/_layouts/model.html
@@ -9,26 +9,15 @@
   <link href='{{site.baseurl}}/assets/css/styles.css' rel='stylesheet' />
 </head>
 
-<body id="techfar_landing_page">
-
-<div id="navigation_bar">
-   <div class="outer_container">
-    <div class="inner_container">
-      <a href="#introduction"><h4>The TechFAR Handbook</h4></a>
-    </div>
-  </div>
-</div>
-
-<div id="introduction" class="techfar_intro">
+<body id="page_model">
   <div class="outer_container">
     <div class="inner_container">
+      <h1>Infraestructura estratégica de Datos Abiertos</h1>
       {{ content }}
+    </div>
+  </div>
 
-</div>
-</div>
-</div>
-</div>
+  <script id="_fed_an_js_tag" type="text/javascript" src="{{site.baseurl}}/assets/js/federated-analytics.all.min.js?agency=GSA&sub-agency=OGP"></script>
 
-<script id="_fed_an_js_tag" type="text/javascript" src="{{site.baseurl}}/assets/js/federated-analytics.all.min.js?agency=GSA&sub-agency=OGP"></script>
 </body>
 </html>
