--- a/assets/sass/styles.css.scss
+++ b/assets/sass/styles.css.scss
@@ -527,10 +527,19 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
     }
   }
 
+  #page_model {
+    background: #eeeeee;
+    color: $white;
+
+    h1 {
+      color: $black;
+    }
+  }
+
   .model-table {
     td {
       padding: 5px;
-      border: 3px solid $light_black;
+      
 
       h6 {
         margin: 0;
@@ -569,7 +578,7 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
     }
 
     .content {
-      background: #f3f3f3;
+      background: $white;
       font-size: 13px;
       line-height: 19px;
       color: $light_black;
