--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,28 +12,15 @@
 
 <body>
 
-<div id="navigation_bar">
-   <div class="outer_container">
-    <div class="inner_container">
-      <a href="#introduction"><h4>{{ site.title }}</h4></a>
-      <ul class="nav">
-        <li class="play_square"><a href="#actividad1"
-          title="Actividad">a</a></li>
-      </ul>
-      <div id="menu_icon">
-        <a href="#plays_index_anchor" title="Return to Index"></a>
-      </div>
-    </div>
-  </div>
-</div>
+{% assign activities = site.activities | where: 'play', page.play %}
 
-<div id="introduction">
-  <div class="outer_container">
-    <div class="inner_container">
-      {{ content }}
-    </div>
-  </div>
-</div>
+{% include activities_navigation.html %}
+
+{% include activities_introduction.html %}
+
+{% include activities_index.html %}
+
+{% include activities.html %}
 
 <script src='{{site.baseurl}}/assets/js/jquery-1.11.1.min.js'></script>
 <script src='{{site.baseurl}}/assets/js/scrollspy.js'></script>
@@ -41,3 +28,4 @@
 <script id="_fed_an_js_tag" type="text/javascript" src="{{site.baseurl}}/assets/js/federated-analytics.all.min.js?agency=GSA&sub-agency=OGP"></script>
 </body>
 </html>
+
