--- a/_includes/activities_index.html
+++ b/_includes/activities_index.html
@@ -6,12 +6,12 @@
       <div class="columns">
         <ol>
         {% for activity in activities %}
-          <li><a href="#activity{{ activity.id }}" title="View Activity {{ activity.id }}">{{ activity.title }}</a></li>
+          <li><a href="#actividad-{{ activity.id }}" title="View Activity {{ activity.id }}">{{ activity.title }}</a></li>
         {% endfor %}
         </ol>
       </div>
       <div class="button">
-        <a href="#activitya" title="View the In Detail">VE EN DETALLE</a>
+        <a href="#actividad-a" title="View the In Detail">VE EN DETALLE</a>
       </div>
     </div>
   </div>
