--- a/_includes/activities_navigation.html
+++ b/_includes/activities_navigation.html
@@ -9,7 +9,7 @@
       </a>
       <ul class="nav">
         {% for activity in activities %}
-          <li class="play_square"><a href="#activity{{ activity.id }}" title="View Activity {{ activity.id }}: {{ activity.title }}">{{ activity.id }}</a></li>
+          <li class="play_square"><a href="#actividad-{{ activity.id }}" title="View Activity {{ activity.id }}: {{ activity.title }}">{{ activity.id }}</a></li>
         {% endfor %}
       </ul>
       <div id="menu_icon">
