--- a/assets/sass/styles.css.scss
+++ b/assets/sass/styles.css.scss
@@ -48,7 +48,7 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
     text-decoration: underline;
   }
 
-  ol, ul {
+  ol {
     list-style-type: decimal;
     list-style-position: inside;
     li {
