--- a/_includes/activities_index.html
+++ b/_includes/activities_index.html
@@ -1,3 +1,5 @@
+{% if activities.size > 0 %}
+
 <div id="activities_index">
   <div class="outer_container">
     <div class="inner_container">
@@ -16,4 +18,6 @@
     </div>
   </div>
 </div>
+
+{% endif %}
 
