--- a/_includes/activities_introduction.html
+++ b/_includes/activities_introduction.html
@@ -12,10 +12,13 @@
 
       <p>{{content}}</p>
 
+      {% if activities.size > 0 %}
       <div class="button">
         <a href="#activities_index_anchor" title="View the Activities">VE LAS
           ACTIVIDADES</a>
       </div>
+      {% endif %}
+
       <div class="button">
         <a href="{{site.baseurl}}/"
           title="Regresar a la página principal">REGRESA A LA PÁGINA
