Translate play anchor links

--- a/_includes/plays.html
+++ b/_includes/plays.html
@@ -1,7 +1,7 @@
 <div id="plays" class="outer_container">
   {% for play in site.plays %}
     <div class="inner_container">
-      <a class="anchor_offset" id="play{{ play.id }}"></a>
+      <a class="anchor_offset" id="paso-{{ play.id }}"></a>
       <h5>PASO {{ play.id }}</h5>
       <h2>{{ play.title }}</h2>
 
