--- a/_includes/plays_index.html
+++ b/_includes/plays_index.html
@@ -6,12 +6,12 @@
       <div class="columns">
         <ol>
         {% for play in site.plays %}
-          <li><a href="#play{{ play.id }}" title="View Play {{ play.id }}">{{ play.title }}</a></li>
+          <li><a href="#paso-{{ play.id }}" title="View Play {{ play.id }}">{{ play.title }}</a></li>
         {% endfor %}
         </ol>
       </div>
       <div class="button">
-        <a href="#play1" title="View the In Detail">VE EN DETALLE</a>
+        <a href="#paso-1" title="View the In Detail">VE EN DETALLE</a>
       </div>
     </div>
   </div>
