--- a/_includes/plays_navigation.html
+++ b/_includes/plays_navigation.html
@@ -4,7 +4,7 @@
       <a href="#introduction"><h4>{{ site.title }}</h4></a>
       <ul class="nav">
         {% for play in site.plays %}
-          <li class="play_square"><a href="#play{{ play.id }}" title="View Play {{ play.id }}: {{ play.title }}">{{ play.id }}</a></li>
+          <li class="play_square"><a href="#paso-{{ play.id }}" title="View Play {{ play.id }}: {{ play.title }}">{{ play.id }}</a></li>
         {% endfor %}
       </ul>
       <div id="menu_icon">
