Change anchor tag for introduction to intro
* Updates jQuery selector
* Adds an introduction class for style
* Changes id to "intro"

--- a/_includes/activities_navigation.html
+++ b/_includes/activities_navigation.html
@@ -4,7 +4,7 @@
       <a href="{{site.baseurl}}/">
         <h4>{{site.title}}</h4>
       </a>/
-      <a href="#introduction">
+      <a href="#intro">
         <h4>{{page.title}}</h4>
       </a>
       <ul class="nav">
