--- a/_includes/plays_introduction.html
+++ b/_includes/plays_introduction.html
@@ -1,4 +1,4 @@
-<div id="introduction">
+<div id="intro" class="introduction">
   <div class="outer_container">
     <div class="inner_container">
       {% capture introduction %}{% include introduction.md %}{% endcapture %}
