--- a/_includes/plays_navigation.html
+++ b/_includes/plays_navigation.html
@@ -1,7 +1,7 @@
 <div id="navigation_bar">
    <div class="outer_container">
     <div class="inner_container">
-      <a href="#introduction"><h4>{{ site.title }}</h4></a>
+      <a href="#intro"><h4>{{ site.title }}</h4></a>
       <ul class="nav">
         {% for play in site.plays %}
           <li class="play_square"><a href="#paso-{{ play.id }}" title="View Play {{ play.id }}: {{ play.title }}">{{ play.id }}</a></li>
