--- a/assets/sass/styles.css.scss
+++ b/assets/sass/styles.css.scss
@@ -170,7 +170,7 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
   }
 
 
-  #introduction {
+  .introduction {
     background: $light_black;
     color: $white;
     padding-bottom: 60px;
