--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -155,21 +155,21 @@
     padding: 10px;
     font-family: "Open Sans", sans-serif; }
 
-  #introduction {
+  .introduction {
     background: #474747;
     color: white;
     padding-bottom: 60px; }
-    #introduction a {
+    .introduction a {
       text-decoration: underline; }
-      #introduction a:hover {
+      .introduction a:hover {
         background: white;
         color: #474747; }
-      #introduction a:hover.wrapping_an_image {
+      .introduction a:hover.wrapping_an_image {
         background: inherit;
         text-decoration: none; }
-    #introduction .button a {
+    .introduction .button a {
       text-decoration: none; }
-    #introduction p {
+    .introduction p {
       max-width: 600px;
       font-family: "Open Sans", sans-serif;
       font-size: 20px;
@@ -177,14 +177,14 @@
       margin-top: 40px;
       font-weight: lighter;
       color: white; }
-    #introduction p.download_links {
+    .introduction p.download_links {
       font-size: 16px; }
-    #introduction li {
+    .introduction li {
       color: white; } }
   @media screen and (min-width: 0px) and (max-width: 640px) {
-    #introduction {
+    .introduction {
       padding-bottom: 20px; }
-      #introduction p {
+      .introduction p {
         font-size: 16px;
         line-height: 24px;
         margin-top: 20px; } }
