--- a/_includes/activities_introduction.html
+++ b/_includes/activities_introduction.html
@@ -6,9 +6,8 @@
           <img src="{{site.baseurl}}/assets/images/datos.gob.mx_logo.png" alt="Logo de Datos Abiertos" />
         </a>
       </p>
-      <h1>{{site.title}}</h1>
-      <h3>{{page.title}}</h3>
-      <h3>{{page.subtitle}}</h3>
+      <h4>{{site.title}}</h4>
+      <h1>{{page.title}} | {{page.subtitle}}</h1>
 
       <p>{{content}}</p>
 
