Estandariza colores de links

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -160,15 +160,18 @@
     color: white;
     padding-bottom: 60px; }
     .introduction a {
-      text-decoration: underline; }
+      color: #00cc99; }
       .introduction a:hover {
-        background: white;
-        color: #474747; }
+        text-decoration: underline; }
       .introduction a:hover.wrapping_an_image {
         background: inherit;
         text-decoration: none; }
     .introduction .button a {
+      border-color: #00cc99;
+      color: #00cc99;
       text-decoration: none; }
+      .introduction .button a:hover {
+        color: white; }
     .introduction p {
       max-width: 600px;
       font-family: "Open Sans", sans-serif;
@@ -317,9 +320,9 @@
       margin-top: 0; }
     #plays_index .button a, #activities_index .button a {
       color: white; }
-    #plays_index .button a:hover, #activities_index .button a:hover {
-      color: #00cc99;
-      background: white; } }
+      #plays_index .button a:hover, #activities_index .button a:hover {
+        color: #474747;
+        background: white; } }
   @media screen and (min-width: 0px) and (max-width: 640px) {
     #plays_index, #activities_index {
       padding-bottom: 20px; }
@@ -347,85 +350,89 @@
       column-gap: 00px; } }
 
 @media screen {
-  #plays h2, #plays h4, #techfar h2, #techfar h4 {
+  #plays h2, #plays h4, #activities h2, #activities h4, #techfar h2, #techfar h4 {
     float: left;
     display: block;
     margin-right: 2.35765%;
     width: 65.88078%; }
-    #plays h2:last-child, #plays h4:last-child, #techfar h2:last-child, #techfar h4:last-child {
+    #plays h2:last-child, #plays h4:last-child, #activities h2:last-child, #activities h4:last-child, #techfar h2:last-child, #techfar h4:last-child {
       margin-right: 0; }
-  #plays h4, #techfar h4 {
+  #plays h4, #activities h4, #techfar h4 {
     margin-top: 0px;
     color: #663399; }
-  #plays h2, #techfar h2 {
+  #plays h2, #activities h2, #techfar h2 {
     margin-bottom: 24px; }
-  #plays h5, #techfar h5 {
+  #plays h5, #activities h5, #techfar h5 {
     font-size: 14px; }
-  #plays p, #techfar p {
+  #plays p, #activities p, #techfar p {
     float: left;
     display: block;
     margin-right: 2.35765%;
     width: 74.41059%; }
-    #plays p:last-child, #techfar p:last-child {
+    #plays p:last-child, #activities p:last-child, #techfar p:last-child {
       margin-right: 0; }
-  #plays ol, #plays ul, #techfar ol, #techfar ul {
+  #plays ol, #plays ul, #activities ol, #activities ul, #techfar ol, #techfar ul {
     float: left;
     display: block;
     margin-right: 2.35765%;
     width: 65.88078%;
     list-style-position: outside;
     padding-left: 25px; }
-    #plays ol:last-child, #plays ul:last-child, #techfar ol:last-child, #techfar ul:last-child {
+    #plays ol:last-child, #plays ul:last-child, #activities ol:last-child, #activities ul:last-child, #techfar ol:last-child, #techfar ul:last-child {
       margin-right: 0; }
-  #plays ol, #techfar ol {
+  #plays ol, #activities ol, #techfar ol {
     list-style-type: lower-alpha;
     margin-top: 0px; }
-  #plays li, #techfar li {
+  #plays li, #activities li, #techfar li {
     font-size: 15px;
     line-height: 25px;
     padding-left: 5px; }
-  #plays ul, #techfar ul {
+  #plays ul, #activities ul, #techfar ul {
     list-style-image: url("../images/bullet-circle.svg"); }
-  #plays a, #techfar a {
-    color: #663399;
-    text-decoration: underline;
+  #plays a, #activities a, #techfar a {
+    color: #00cc99;
     display: inline-block; }
-    #plays a.more, #techfar a.more {
+    #plays a:hover, #activities a:hover, #techfar a:hover {
+      text-decoration: underline; }
+    #plays a.more, #activities a.more, #techfar a.more {
       text-transform: uppercase;
       text-decoration: none;
-      color: #474747;
-      border: 1px solid #474747;
+      color: #00cc99;
+      border: 1px solid #00cc99;
       padding: 10px 20px; }
-  #plays a:hover, #techfar a:hover {
+      #plays a.more:hover, #activities a.more:hover, #techfar a.more:hover {
+        background-color: #00cc99;
+        color: #474747; }
+  #plays a:hover, #activities a:hover, #techfar a:hover {
     color: #00cc99; } }
 @media screen and (min-width: 0px) and (max-width: 640px) {
-  #plays p, #techfar p {
+  #plays p, #activities p, #techfar p {
     font-size: 16px;
     line-height: 24px; }
-  #plays ol, #plays li, #techfar ol, #techfar li {
+  #plays ol, #plays li, #activities ol, #activities li, #techfar ol, #techfar li {
     font-size: 14px;
     line-height: 20px; }
-  #plays h2, #plays h4, #plays p, #plays ol, #plays ul, #techfar h2, #techfar h4, #techfar p, #techfar ol, #techfar ul {
+  #plays h2, #plays h4, #plays p, #plays ol, #plays ul, #activities h2, #activities h4, #activities p, #activities ol, #activities ul, #techfar h2, #techfar h4, #techfar p, #techfar ol, #techfar ul {
     float: left;
     display: block;
     margin-right: 7.42297%;
     width: 100%; }
-    #plays h2:last-child, #plays h4:last-child, #plays p:last-child, #plays ol:last-child, #plays ul:last-child, #techfar h2:last-child, #techfar h4:last-child, #techfar p:last-child, #techfar ol:last-child, #techfar ul:last-child {
+    #plays h2:last-child, #plays h4:last-child, #plays p:last-child, #plays ol:last-child, #plays ul:last-child, #activities h2:last-child, #activities h4:last-child, #activities p:last-child, #activities ol:last-child, #activities ul:last-child, #techfar h2:last-child, #techfar h4:last-child, #techfar p:last-child, #techfar ol:last-child, #techfar ul:last-child {
       margin-right: 0; } }
 @media screen and (min-width: 641px) and (max-width: 980px) {
-  #plays h2, #plays h4, #techfar h2, #techfar h4 {
+  #plays h2, #plays h4, #activities h2, #activities h4, #techfar h2, #techfar h4 {
     float: left;
     display: block;
     margin-right: 2.35765%;
     width: 74.41059%; }
-    #plays h2:last-child, #plays h4:last-child, #techfar h2:last-child, #techfar h4:last-child {
+    #plays h2:last-child, #plays h4:last-child, #activities h2:last-child, #activities h4:last-child, #techfar h2:last-child, #techfar h4:last-child {
       margin-right: 0; }
-  #plays p, #techfar p {
+  #plays p, #activities p, #techfar p {
     float: left;
     display: block;
     margin-right: 2.35765%;
     width: 82.94039%; }
-    #plays p:last-child, #techfar p:last-child {
+    #plays p:last-child, #activities p:last-child, #techfar p:last-child {
       margin-right: 0; } }
 
 @media screen {
