Quita el detalle de los plays en el home

--- a/_includes/plays_introduction.html
+++ b/_includes/plays_introduction.html
@@ -4,7 +4,7 @@
       {% capture introduction %}{% include introduction.md %}{% endcapture %}
       {{ introduction | markdownify }}
       <div class="button">
-        <a href="#plays_index_anchor" title="View the Plays">VE LOS
+        <a href="paso-1" title="View the Plays">VE LOS
           PASOS</a>
       </div>
       <div class="button">
